# zk_dtypes

./: .bazelrc  .bazelrc.ci  .clang-format  .codespellrc  .gitignore  .gitmessage  .pre-commit-config.yaml  BUILD.bazel  CLAUDE.md  CPPLINT.cfg  MANIFEST.in  README.md  WORKSPACE.bazel  __init__.py  pyproject.toml  requirements_lock_3_11.txt  requirements_lock_3_12.txt  requirements_lock_3_13.txt  setup.py
.claude/knowledge/: architecture.md  solutions.md  testing-guide.md
.gemini/: config.yaml  styleguide.md
.github/: actionlint.yaml
.github/ISSUE_TEMPLATE/: config.yml  (+3 more)
bazel/: zk_dtypes_deps.bzl
docs/: development.md
examples/: zk_dtypes_examples.ipynb
scripts/: check_notebook_outputs.py
zk_dtypes/: BUILD.bazel  __init__.py  _ecinfo.py  _efinfo.py  _field_factory.py  _iinfo.py  _pfinfo.py  py_extension.bzl
zk_dtypes/_src/: big_int.cc  bigint_numpy.h  common.h  dtypes.cc  ec_point_dtype.cc  ec_point_dtype.h  ec_point_numpy.h  field_dtype.cc  field_dtype.h  field_modarith.h  field_numpy.h  int_caster.cc  int_caster.h  intn_numpy.h  numpy.cc  numpy.h  random.cc  signed_big_int.cc  ufuncs.h
zk_dtypes/include/: CPPLINT.cfg  all_types.h  always_false.h  arithmetics.h  batch_inverse.h  big_int.h  bit_iterator.h  bit_traits_forward.h  bits.h  byinverter.h  comparable_traits.h  control_flow_operation.h  control_flow_operation_forward.h  intn.h  pow.h  random.h  scalar_mul.h  signed_big_int.h  str_join.h  template_util.h
zk_dtypes/include/circle/: circle_domain.h  circle_point.h  circle_point_index.h  coset.h  fft.h  m31_circle.h
zk_dtypes/include/elliptic_curve/bls12_381/: fq.h  fqx2.h  fr.h  g1.h
zk_dtypes/include/elliptic_curve/bn/: bn_curve.h  g2_prepared.h
zk_dtypes/include/elliptic_curve/bn/bn254/: bn254_curve.h  curve.h  fq.h  fq2.h  fqx12.h  fqx2.h  fqx6.h  fr.h  g1.h  g2.h
zk_dtypes/include/elliptic_curve/curve25519/: fq.h  fr.h
zk_dtypes/include/elliptic_curve/curve25519/ed25519/: g1.h
zk_dtypes/include/elliptic_curve/mnt4_298/: fq.h  fqx2.h  fqx4.h  fr.h  g1.h  g2.h
zk_dtypes/include/elliptic_curve/mnt6_298/: fq.h  fqx3.h  fqx6.h  fr.h  g1.h  g2.h
zk_dtypes/include/elliptic_curve/pairing/: ell_coeff.h  g2_prepared_base.h  g2_projective.h  pairing_friendly_curve.h  pairing_traits_forward.h  twist_type.h
zk_dtypes/include/elliptic_curve/pallas/: fq.h  fr.h  g1.h
zk_dtypes/include/elliptic_curve/secp256k1/: fq.h  fr.h  g1.h
zk_dtypes/include/elliptic_curve/secp256r1/: fq.h  fr.h  g1.h
zk_dtypes/include/elliptic_curve/short_weierstrass/: affine_point.h  affine_point_operation.h  jacobian_point.h  jacobian_point_impl.h  jacobian_point_operation.h  point_base.h  point_xyzz.h  point_xyzz_impl.h  point_xyzz_operation.h  sw_curve.h
zk_dtypes/include/elliptic_curve/short_weierstrass/test/: sw_curve_config.h
zk_dtypes/include/elliptic_curve/twisted_edwards/: affine_point.h  affine_point_operation.h  extended_point.h  extended_point_operation.h  point_base.h  te_curve.h
zk_dtypes/include/elliptic_curve/twisted_edwards/test/: te_curve_config.h
zk_dtypes/include/elliptic_curve/vesta/: fq.h  fr.h  g1.h
zk_dtypes/include/field/: barrett_multiplication.h  big_binary_field.h  big_prime_field.h  binary_field.h  binary_field_config.h  binary_field_multiplication.h  cubic_extension_field_operation.h  cyclotomic_operation.h  extension_field.h  extension_field_operation.h  extension_field_operation_traits_forward.h  field.h  finite_field.h  finite_field_traits.h  frobenius.h  frobenius_coeffs.h  frobenius_operation.h  goldilocks_multiplication.h  karatsuba_operation.h  mersenne_multiplication.h  modular_operations.h  mont_multiplication.h  mul_benchmark.cc  polynomial_eea_inverse.h  polynomial_reduction.h  prime_field.h  quadratic_extension_field_operation.h  quartic_extension_field_operation.h  root_of_unity.h  small_binary_field.h  small_prime_field.h  toom_cook_operation.h  vandermonde_matrix.h
zk_dtypes/include/field/babybear/: babybear.h  babybear4.h  babybearx4.h
zk_dtypes/include/field/goldilocks/: goldilocks.h  goldilocks3.h  goldilocks3_pil.h  goldilocksx3.h
zk_dtypes/include/field/goldilocks2/: goldilocks2.h
zk_dtypes/include/field/goldilocks3/: goldilocks3.h
zk_dtypes/include/field/goldilocks4/: goldilocks4.h
zk_dtypes/include/field/goldilocks5/: goldilocks5.h
zk_dtypes/include/field/goldilocks6/: goldilocks6.h
zk_dtypes/include/field/goldilocks7/: goldilocks7.h
zk_dtypes/include/field/koalabear/: koalabear.h  koalabear4.h  koalabearx4.h
zk_dtypes/include/field/mersenne31/: mersenne31.h  mersenne312.h  mersenne314.h  mersenne31x2.h  mersenne31x2x2.h
zk_dtypes/include/field/ntt64_a/: ntt64_a.h
zk_dtypes/include/field/ntt64_b/: ntt64_b.h
zk_dtypes/include/field/ntt64_c/: ntt64_c.h
zk_dtypes/include/field/ntt64_d/: ntt64_d.h
zk_dtypes/include/field/ntt64_e/: ntt64_e.h
zk_dtypes/include/field/ntt64_f/: ntt64_f.h
zk_dtypes/include/field/square_root_algorithms/: shanks.h  square_root_algorithm9.h  tonelli_shanks.h
zk_dtypes/include/geometry/: curve_type.h  point_declarations.h  point_traits.h
zk_dtypes/include/group/: group.h
zk_dtypes/tests/: batch_inverse_unittest.cc  big_int_unittest.cc  bigintn_test.py  binary_field_test.py  bit_iterator_unittest.cc  byinverter_unittest.cc  conftest.py  ec_point_test.py  extension_field_test.py  field_test.py  iinfo_test.py  intn_test.py  intn_unittest.cc  mnt4_298_test.py  mnt6_298_test.py  multi_thread_utils.py  pairing_test.py  pairing_unittest.cc  prime_field_factory_test.py  prime_field_test.py  signed_big_int_unittest.cc
zk_dtypes/tests/circle/: circle_domain_unittest.cc  circle_point_unittest.cc  coset_unittest.cc
zk_dtypes/tests/elliptic_curve/: affine_point_unittest.cc  constexpr_curve_config_unittest.cc  ed25519_unittest.cc  jacobian_point_unittest.cc  point_xyzz_unittest.cc  te_affine_point_unittest.cc  te_extended_point_unittest.cc
zk_dtypes/tests/field/: binary_field_unittest.cc  extension_field_unittest.cc  goldilocks3_pil_unittest.cc  goldilocksx3_unittest.cc  prime_field_unittest.cc  root_of_unity_unittest.cc  square_root_algorithms_unittest.cc
(+7 files in other folders)
