""" Main zk_dtypes library. """

load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

package(
    default_visibility = ["//visibility:public"],
    licenses = ["notice"],
)

cc_library(
    name = "always_false",
    hdrs = ["include/always_false.h"],
)

cc_library(
    name = "arithmetics",
    hdrs = ["include/arithmetics.h"],
)

cc_library(
    name = "batch_inverse",
    hdrs = ["include/batch_inverse.h"],
    deps = [
        ":template_util",
        "@com_google_absl//absl/base:core_headers",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
    ],
)

cc_library(
    name = "big_int",
    srcs = ["_src/big_int.cc"],
    hdrs = ["include/big_int.h"],
    deps = [
        ":arithmetics",
        ":bit_traits_forward",
        ":random",
        "@com_google_absl//absl/base",
        "@com_google_absl//absl/base:core_headers",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/numeric:int128",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
    ],
)

cc_library(
    name = "bit_iterator",
    hdrs = ["include/bit_iterator.h"],
    deps = [
        ":bit_traits_forward",
        "@com_google_absl//absl/base:endian",
    ],
)

cc_library(
    name = "bit_traits_forward",
    hdrs = ["include/bit_traits_forward.h"],
)

cc_library(
    name = "bits",
    hdrs = ["include/bits.h"],
    deps = ["@com_google_absl//absl/numeric:bits"],
)

cc_library(
    name = "byinverter",
    hdrs = ["include/byinverter.h"],
    deps = [
        ":big_int",
        "@com_google_absl//absl/numeric:bits",
        "@com_google_absl//absl/numeric:int128",
    ],
)

cc_library(
    name = "intn",
    hdrs = ["include/intn.h"],
)

cc_library(
    name = "pow",
    hdrs = ["include/pow.h"],
    deps = [
        ":big_int",
        ":bit_iterator",
    ],
)

cc_library(
    name = "random",
    srcs = ["_src/random.cc"],
    hdrs = ["include/random.h"],
    deps = ["@com_google_absl//absl/random"],
)

cc_library(
    name = "scalar_mul",
    hdrs = ["include/scalar_mul.h"],
    deps = [
        ":big_int",
        ":bit_iterator",
    ],
)

cc_library(
    name = "str_join",
    hdrs = ["include/str_join.h"],
)

cc_library(
    name = "template_util",
    hdrs = ["include/template_util.h"],
)

cc_test(
    name = "base_unitests",
    srcs = [
        "tests/batch_inverse_unittest.cc",
        "tests/big_int_unittest.cc",
        "tests/bit_iterator_unittest.cc",
        "tests/byinverter_unittest.cc",
        "tests/intn_unittest.cc",
    ],
    deps = [
        ":batch_inverse",
        ":big_int",
        ":bit_iterator",
        ":bn254_fr",
        ":byinverter",
        ":intn",
        "@com_google_absl//absl/container:inlined_vector",
        "@com_google_absl//absl/status:status_matchers",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/types:span",
        "@com_google_googletest//:gtest",
        "@com_google_googletest//:gtest_main",
        "@eigen_archive//:eigen3",
    ],
)

#########
# Field #
#########

cc_library(
    name = "babybear",
    hdrs = ["include/field/babybear/babybear.h"],
    deps = [":small_prime_field"],
)

cc_library(
    name = "big_prime_field",
    hdrs = ["include/field/big_prime_field.h"],
    deps = [
        ":big_int",
        ":byinverter",
        ":finite_field",
        ":pow",
        ":prime_field",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/status:statusor",
        "@com_google_googletest//:gtest_prod",
    ],
)

cc_library(
    name = "extension_field",
    hdrs = ["include/field/extension_field.h"],
    deps = [
        ":always_false",
        ":finite_field",
        ":pow",
        ":str_join",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/strings",
    ],
)

cc_library(
    name = "field",
    hdrs = ["include/field/field.h"],
)

cc_library(
    name = "finite_field",
    hdrs = ["include/field/finite_field.h"],
    deps = [
        ":always_false",
        ":field",
        ":finite_field_traits",
        ":square_root_algorithms",
    ],
)

cc_library(
    name = "finite_field_traits",
    hdrs = ["include/field/finite_field_traits.h"],
)

cc_library(
    name = "goldilocks",
    hdrs = ["include/field/goldilocks/goldilocks.h"],
    deps = [":small_prime_field"],
)

cc_library(
    name = "mersenne31",
    hdrs = ["include/field/mersenne31/mersenne31.h"],
    deps = [":small_prime_field"],
)

cc_library(
    name = "koalabear",
    hdrs = ["include/field/koalabear/koalabear.h"],
    deps = [":small_prime_field"],
)

cc_library(
    name = "prime_field",
    hdrs = ["include/field/prime_field.h"],
    deps = [":finite_field_traits"],
)

cc_library(
    name = "root_of_unity",
    hdrs = ["include/field/root_of_unity.h"],
    deps = [
        ":bits",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
    ],
)

cc_library(
    name = "small_prime_field",
    hdrs = ["include/field/small_prime_field.h"],
    deps = [
        ":big_int",
        ":byinverter",
        ":finite_field",
        ":pow",
        ":prime_field",
        ":random",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@com_google_googletest//:gtest_prod",
    ],
)

cc_library(
    name = "square_root_algorithms",
    hdrs = [
        "include/field/square_root_algorithms/shanks.h",
        "include/field/square_root_algorithms/square_root_algorithm9.h",
        "include/field/square_root_algorithms/tonelli_shanks.h",
    ],
    deps = [
        ":finite_field_traits",
        "@com_google_absl//absl/status:statusor",
    ],
)

cc_test(
    name = "field_unitests",
    srcs = [
        "tests/field/extension_field_unittest.cc",
        "tests/field/prime_field_unittest.cc",
        "tests/field/root_of_unity_unittest.cc",
        "tests/field/square_root_algorithms_unittest.cc",
    ],
    deps = [
        ":babybear",
        ":bn254_fq",
        ":bn254_fq2",
        ":bn254_fr",
        ":goldilocks",
        ":koalabear",
        ":mersenne31",
        ":random",
        ":root_of_unity",
        ":sw_test_curve_config",
        "@com_google_googletest//:gtest",
        "@com_google_googletest//:gtest_main",
    ],
)

############
# Geometry #
############

cc_library(
    name = "curve_type",
    hdrs = ["include/geometry/curve_type.h"],
)

cc_library(
    name = "point_declarations",
    hdrs = ["include/geometry/point_declarations.h"],
)

##################
# Elliptic Curve #
##################

cc_library(
    name = "bn254_fq",
    hdrs = ["include/elliptic_curve/bn/bn254/fq.h"],
    deps = [":big_prime_field"],
)

cc_library(
    name = "bn254_fq2",
    hdrs = ["include/elliptic_curve/bn/bn254/fq2.h"],
    deps = [
        ":bn254_fq",
        ":extension_field",
    ],
)

cc_library(
    name = "bn254_fr",
    hdrs = ["include/elliptic_curve/bn/bn254/fr.h"],
    deps = [":big_prime_field"],
)

cc_library(
    name = "bn254_curve",
    hdrs = ["include/elliptic_curve/bn/bn254/curve.h"],
    deps = [
        ":bn254_g1",
        ":bn254_g2",
    ],
)

cc_library(
    name = "bn254_g1",
    hdrs = ["include/elliptic_curve/bn/bn254/g1.h"],
    deps = [
        ":bn254_fq",
        ":bn254_fr",
        ":sw_affine_point",
        ":sw_curve",
        ":sw_jacobian_point",
        ":sw_point_xyzz",
    ],
)

cc_library(
    name = "bn254_g2",
    hdrs = ["include/elliptic_curve/bn/bn254/g2.h"],
    deps = [
        ":bn254_fq2",
        ":bn254_fr",
        ":sw_affine_point",
        ":sw_curve",
        ":sw_jacobian_point",
        ":sw_point_xyzz",
    ],
)

cc_library(
    name = "sw_affine_point",
    hdrs = ["include/elliptic_curve/short_weierstrass/affine_point.h"],
    deps = [
        ":curve_type",
        ":point_declarations",
        ":scalar_mul",
        ":sw_curve",
        "@com_google_absl//absl/log",
        "@com_google_absl//absl/strings",
    ],
)

cc_library(
    name = "sw_curve",
    hdrs = ["include/elliptic_curve/short_weierstrass/sw_curve.h"],
    deps = [
        ":curve_type",
        ":point_declarations",
        "@com_google_absl//absl/status:statusor",
    ],
)

cc_library(
    name = "sw_jacobian_point",
    hdrs = [
        "include/elliptic_curve/short_weierstrass/jacobian_point.h",
        "include/elliptic_curve/short_weierstrass/jacobian_point_impl.h",
    ],
    deps = [
        ":batch_inverse",
        ":curve_type",
        ":point_declarations",
        ":scalar_mul",
        ":sw_curve",
        ":template_util",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
    ],
)

cc_library(
    name = "sw_point_xyzz",
    hdrs = [
        "include/elliptic_curve/short_weierstrass/point_xyzz.h",
        "include/elliptic_curve/short_weierstrass/point_xyzz_impl.h",
    ],
    deps = [
        ":batch_inverse",
        ":curve_type",
        ":point_declarations",
        ":scalar_mul",
        ":sw_curve",
        ":template_util",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
    ],
)

cc_library(
    name = "sw_test_curve_config",
    hdrs = ["include/elliptic_curve/short_weierstrass/test/sw_curve_config.h"],
    deps = [
        ":extension_field",
        ":small_prime_field",
        ":sw_affine_point",
        ":sw_curve",
        ":sw_jacobian_point",
        ":sw_point_xyzz",
    ],
)

cc_test(
    name = "elliptic_curve_unitests",
    srcs = [
        "tests/elliptic_curve/affine_point_unittest.cc",
        "tests/elliptic_curve/jacobian_point_unittest.cc",
        "tests/elliptic_curve/point_xyzz_unittest.cc",
    ],
    deps = [
        ":sw_test_curve_config",
        "@com_google_googletest//:gtest",
        "@com_google_googletest//:gtest_main",
    ],
)
