# Copyright 2025 The zk_dtypes Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# ==============================================================================

""" Main zk_dtypes library. """

load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")
load("@rules_python//python:defs.bzl", "py_library", "py_test")
load(":py_extension.bzl", "py_extension")

package(
    default_visibility = ["//visibility:public"],
    licenses = ["notice"],
)

cc_library(
    name = "all_types",
    hdrs = ["include/all_types.h"],
    deps = [
        ":babybear",
        ":babybear4",
        ":bn254_fq",
        ":bn254_fq2",
        ":bn254_fr",
        ":bn254_g1",
        ":bn254_g2",
        ":goldilocks",
        ":goldilocks3",
        ":koalabear",
        ":koalabear4",
        ":mersenne31",
        ":mersenne312",
    ],
)

cc_library(
    name = "always_false",
    hdrs = ["include/always_false.h"],
)

cc_library(
    name = "arithmetics",
    hdrs = ["include/arithmetics.h"],
)

cc_library(
    name = "batch_inverse",
    hdrs = ["include/batch_inverse.h"],
    deps = [
        ":template_util",
        "@com_google_absl//absl/base:core_headers",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
    ],
)

cc_library(
    name = "big_int",
    srcs = ["_src/big_int.cc"],
    hdrs = ["include/big_int.h"],
    deps = [
        ":arithmetics",
        ":bit_traits_forward",
        ":random",
        "@com_google_absl//absl/base",
        "@com_google_absl//absl/base:core_headers",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/numeric:int128",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
    ],
)

cc_library(
    name = "bit_iterator",
    hdrs = ["include/bit_iterator.h"],
    deps = [
        ":bit_traits_forward",
        "@com_google_absl//absl/base:endian",
    ],
)

cc_library(
    name = "bit_traits_forward",
    hdrs = ["include/bit_traits_forward.h"],
)

cc_library(
    name = "bits",
    hdrs = ["include/bits.h"],
    deps = ["@com_google_absl//absl/numeric:bits"],
)

cc_library(
    name = "byinverter",
    hdrs = ["include/byinverter.h"],
    deps = [
        ":big_int",
        "@com_google_absl//absl/numeric:bits",
        "@com_google_absl//absl/numeric:int128",
    ],
)

cc_library(
    name = "intn",
    hdrs = ["include/intn.h"],
)

cc_library(
    name = "pow",
    hdrs = ["include/pow.h"],
    deps = [
        ":big_int",
        ":bit_iterator",
    ],
)

cc_library(
    name = "random",
    srcs = ["_src/random.cc"],
    hdrs = ["include/random.h"],
    deps = ["@com_google_absl//absl/random"],
)

cc_library(
    name = "scalar_mul",
    hdrs = ["include/scalar_mul.h"],
    deps = [
        ":big_int",
        ":bit_iterator",
    ],
)

cc_library(
    name = "str_join",
    hdrs = ["include/str_join.h"],
)

cc_library(
    name = "template_util",
    hdrs = ["include/template_util.h"],
)

cc_test(
    name = "base_unittests",
    srcs = [
        "tests/batch_inverse_unittest.cc",
        "tests/big_int_unittest.cc",
        "tests/bit_iterator_unittest.cc",
        "tests/byinverter_unittest.cc",
        "tests/intn_unittest.cc",
    ],
    deps = [
        ":batch_inverse",
        ":big_int",
        ":bit_iterator",
        ":byinverter",
        ":intn",
        ":sw_test_curve_config",
        "@com_google_absl//absl/container:inlined_vector",
        "@com_google_absl//absl/status:status_matchers",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/types:span",
        "@com_google_googletest//:gtest",
        "@com_google_googletest//:gtest_main",
        "@eigen_archive//:eigen3",
    ],
)

#########
# Field #
#########

cc_library(
    name = "babybear",
    hdrs = ["include/field/babybear/babybear.h"],
    deps = [":small_prime_field"],
)

cc_library(
    name = "babybear4",
    hdrs = ["include/field/babybear/babybear4.h"],
    deps = [
        ":babybear",
        ":extension_field",
    ],
)

cc_library(
    name = "big_prime_field",
    hdrs = ["include/field/big_prime_field.h"],
    deps = [
        ":big_int",
        ":byinverter",
        ":finite_field",
        ":modular_operations",
        ":mont_multiplication",
        ":pow",
        ":prime_field",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/status:statusor",
        "@com_google_googletest//:gtest_prod",
    ],
)

cc_library(
    name = "extension_field",
    hdrs = ["include/field/extension_field.h"],
    deps = [
        ":always_false",
        ":extension_field_operations",
        ":finite_field",
        ":frobenius_coeffs",
        ":pow",
        ":str_join",
        "@com_google_absl//absl/base",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/types:span",
    ],
)

cc_library(
    name = "frobenius_coeffs",
    hdrs = ["include/field/frobenius_coeffs.h"],
    deps = [
        ":big_int",
        ":pow",
    ],
)

cc_library(
    name = "extension_field_operations",
    hdrs = [
        "include/field/cubic_extension_field_operation.h",
        "include/field/extension_field_operation.h",
        "include/field/quadratic_extension_field_operation.h",
        "include/field/quartic_extension_field_operation.h",
    ],
    deps = [
        ":extension_field_operation_traits_forward",
        ":frobenius_operation",
        ":karatsuba_operation",
        ":toom_cook_operation",
        ":vandermonde_matrix",
        "@com_google_absl//absl/status:statusor",
    ],
)

cc_library(
    name = "vandermonde_matrix",
    hdrs = ["include/field/vandermonde_matrix.h"],
)

cc_library(
    name = "extension_field_operation_traits_forward",
    hdrs = ["include/field/extension_field_operation_traits_forward.h"],
)

cc_library(
    name = "field",
    hdrs = ["include/field/field.h"],
)

cc_library(
    name = "finite_field",
    hdrs = ["include/field/finite_field.h"],
    deps = [
        ":always_false",
        ":field",
        ":finite_field_traits",
        ":square_root_algorithms",
    ],
)

cc_library(
    name = "finite_field_traits",
    hdrs = ["include/field/finite_field_traits.h"],
)

cc_library(
    name = "frobenius",
    hdrs = ["include/field/frobenius.h"],
    deps = [":extension_field_operation_traits_forward"],
)

cc_library(
    name = "frobenius_operation",
    hdrs = ["include/field/frobenius_operation.h"],
    deps = [":frobenius"],
)

cc_library(
    name = "goldilocks",
    hdrs = ["include/field/goldilocks/goldilocks.h"],
    deps = [":small_prime_field"],
)

cc_library(
    name = "goldilocks3",
    hdrs = ["include/field/goldilocks/goldilocks3.h"],
    deps = [
        ":extension_field",
        ":goldilocks",
    ],
)

cc_library(
    name = "mersenne31",
    hdrs = ["include/field/mersenne31/mersenne31.h"],
    deps = [":small_prime_field"],
)

cc_library(
    name = "mersenne312",
    hdrs = ["include/field/mersenne31/mersenne312.h"],
    deps = [
        ":extension_field",
        ":mersenne31",
    ],
)

cc_library(
    name = "mersenne314",
    hdrs = ["include/field/mersenne31/mersenne314.h"],
    deps = [
        ":extension_field",
        ":mersenne312",
    ],
)

cc_library(
    name = "modular_operations",
    hdrs = ["include/field/modular_operations.h"],
    deps = [
        ":arithmetics",
        ":big_int",
    ],
)

cc_library(
    name = "mont_multiplication",
    hdrs = ["include/field/mont_multiplication.h"],
    deps = [
        ":arithmetics",
        ":big_int",
        ":modular_operations",
    ],
)

cc_library(
    name = "karatsuba_operation",
    hdrs = ["include/field/karatsuba_operation.h"],
    deps = [":extension_field_operation_traits_forward"],
)

cc_library(
    name = "koalabear",
    hdrs = ["include/field/koalabear/koalabear.h"],
    deps = [":small_prime_field"],
)

cc_library(
    name = "koalabear4",
    hdrs = ["include/field/koalabear/koalabear4.h"],
    deps = [
        ":extension_field",
        ":koalabear",
    ],
)

cc_library(
    name = "prime_field",
    hdrs = ["include/field/prime_field.h"],
    deps = [":finite_field_traits"],
)

cc_library(
    name = "root_of_unity",
    hdrs = ["include/field/root_of_unity.h"],
    deps = [
        ":bits",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
    ],
)

cc_library(
    name = "small_prime_field",
    hdrs = ["include/field/small_prime_field.h"],
    deps = [
        ":big_int",
        ":byinverter",
        ":finite_field",
        ":modular_operations",
        ":mont_multiplication",
        ":pow",
        ":prime_field",
        ":random",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@com_google_googletest//:gtest_prod",
    ],
)

cc_library(
    name = "square_root_algorithms",
    hdrs = [
        "include/field/square_root_algorithms/shanks.h",
        "include/field/square_root_algorithms/square_root_algorithm9.h",
        "include/field/square_root_algorithms/tonelli_shanks.h",
    ],
    deps = [
        ":finite_field_traits",
        ":frobenius",
        "@com_google_absl//absl/status:statusor",
    ],
)

cc_library(
    name = "toom_cook_operation",
    hdrs = ["include/field/toom_cook_operation.h"],
    deps = [":extension_field_operation_traits_forward"],
)

cc_test(
    name = "field_unittests",
    srcs = [
        "tests/field/extension_field_unittest.cc",
        "tests/field/prime_field_unittest.cc",
        "tests/field/root_of_unity_unittest.cc",
        "tests/field/square_root_algorithms_unittest.cc",
    ],
    deps = [
        ":all_types",
        # TODO(chokobole33): Remove this.
        ":mersenne314",
        ":random",
        ":root_of_unity",
        ":sw_test_curve_config",
        "@com_google_googletest//:gtest",
        "@com_google_googletest//:gtest_main",
    ],
)

############
# Geometry #
############

cc_library(
    name = "curve_type",
    hdrs = ["include/geometry/curve_type.h"],
)

cc_library(
    name = "point_declarations",
    hdrs = ["include/geometry/point_declarations.h"],
)

##################
# Elliptic Curve #
##################

cc_library(
    name = "bn254_fq",
    hdrs = ["include/elliptic_curve/bn/bn254/fq.h"],
    deps = [":big_prime_field"],
)

cc_library(
    name = "bn254_fq2",
    hdrs = ["include/elliptic_curve/bn/bn254/fq2.h"],
    deps = [
        ":bn254_fq",
        ":extension_field",
    ],
)

cc_library(
    name = "bn254_fr",
    hdrs = ["include/elliptic_curve/bn/bn254/fr.h"],
    deps = [":big_prime_field"],
)

cc_library(
    name = "bn254_curve",
    hdrs = ["include/elliptic_curve/bn/bn254/curve.h"],
    deps = [
        ":bn254_g1",
        ":bn254_g2",
    ],
)

cc_library(
    name = "bn254_g1",
    hdrs = ["include/elliptic_curve/bn/bn254/g1.h"],
    deps = [
        ":bn254_fq",
        ":bn254_fr",
        ":sw_affine_point",
        ":sw_curve",
        ":sw_jacobian_point",
        ":sw_point_xyzz",
    ],
)

cc_library(
    name = "bn254_g2",
    hdrs = ["include/elliptic_curve/bn/bn254/g2.h"],
    deps = [
        ":bn254_fq2",
        ":bn254_fr",
        ":sw_affine_point",
        ":sw_curve",
        ":sw_jacobian_point",
        ":sw_point_xyzz",
    ],
)

cc_library(
    name = "sw_affine_point",
    hdrs = ["include/elliptic_curve/short_weierstrass/affine_point.h"],
    deps = [
        ":curve_type",
        ":point_declarations",
        ":scalar_mul",
        ":sw_curve",
        "@com_google_absl//absl/log",
        "@com_google_absl//absl/strings",
    ],
)

cc_library(
    name = "sw_curve",
    hdrs = ["include/elliptic_curve/short_weierstrass/sw_curve.h"],
    deps = [
        ":curve_type",
        ":point_declarations",
        "@com_google_absl//absl/status:statusor",
    ],
)

cc_library(
    name = "sw_jacobian_point",
    hdrs = [
        "include/elliptic_curve/short_weierstrass/jacobian_point.h",
        "include/elliptic_curve/short_weierstrass/jacobian_point_impl.h",
    ],
    deps = [
        ":batch_inverse",
        ":curve_type",
        ":point_declarations",
        ":scalar_mul",
        ":sw_curve",
        ":template_util",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
    ],
)

cc_library(
    name = "sw_point_xyzz",
    hdrs = [
        "include/elliptic_curve/short_weierstrass/point_xyzz.h",
        "include/elliptic_curve/short_weierstrass/point_xyzz_impl.h",
    ],
    deps = [
        ":batch_inverse",
        ":curve_type",
        ":point_declarations",
        ":scalar_mul",
        ":sw_curve",
        ":template_util",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
    ],
)

cc_library(
    name = "sw_test_curve_config",
    hdrs = ["include/elliptic_curve/short_weierstrass/test/sw_curve_config.h"],
    deps = [
        ":extension_field",
        ":small_prime_field",
        ":sw_affine_point",
        ":sw_curve",
        ":sw_jacobian_point",
        ":sw_point_xyzz",
    ],
)

cc_test(
    name = "elliptic_curve_unittests",
    srcs = [
        "tests/elliptic_curve/affine_point_unittest.cc",
        "tests/elliptic_curve/jacobian_point_unittest.cc",
        "tests/elliptic_curve/point_xyzz_unittest.cc",
    ],
    deps = [
        ":sw_test_curve_config",
        "@com_google_googletest//:gtest",
        "@com_google_googletest//:gtest_main",
    ],
)

##########
# Python #
##########

cc_library(
    name = "_zk_dtypes_ext_cc",
    srcs = [
        "_src/common.h",
        "_src/dtypes.cc",
        "_src/ec_point_numpy.h",
        "_src/field_numpy.h",
        "_src/int_caster.cc",
        "_src/int_caster.h",
        "_src/intn_numpy.h",
        "_src/numpy.cc",
        "_src/numpy.h",
        "_src/ufuncs.h",
    ],
    deps = [
        ":all_types",
        ":intn",
        "//third_party/py/numpy:headers",
        "@com_google_absl//absl/log",
        "@com_google_absl//absl/types:span",
        "@eigen_archive//:eigen3",
        "@rules_python//python/cc:current_py_cc_headers",
    ],
    alwayslink = True,
)

py_extension(
    name = "_zk_dtypes_ext",
    copts = select({
        "@rules_cc//cc/compiler:msvc-cl": [],
        "//conditions:default": ["-fvisibility=hidden"],
    }),
    deps = [":_zk_dtypes_ext_cc"],
)

py_library(
    name = "zk_dtypes_py",
    srcs = [
        "__init__.py",
        "_iinfo.py",
        "_pfinfo.py",
    ],
    data = [":_zk_dtypes_ext"],
)

py_library(
    name = "test_utils",
    testonly = True,
    srcs = [
        "tests/conftest.py",
        "tests/multi_thread_utils.py",
    ],
    imports = ["tests"],
)

py_test(
    name = "field_test",
    srcs = ["tests/field_test.py"],
    main = "tests/field_test.py",
    deps = [
        ":test_utils",
        ":zk_dtypes_py",
        "@pypi//absl_py",
        "@pypi//numpy",
    ],
)

py_test(
    name = "ec_point_test",
    srcs = ["tests/ec_point_test.py"],
    main = "tests/ec_point_test.py",
    deps = [
        ":test_utils",
        ":zk_dtypes_py",
        "@pypi//absl_py",
        "@pypi//numpy",
    ],
)

py_test(
    name = "iinfo_test",
    srcs = ["tests/iinfo_test.py"],
    main = "tests/iinfo_test.py",
    deps = [
        ":test_utils",
        ":zk_dtypes_py",
        "@pypi//absl_py",
        "@pypi//numpy",
    ],
)

py_test(
    name = "intn_test",
    srcs = ["tests/intn_test.py"],
    main = "tests/intn_test.py",
    deps = [
        ":test_utils",
        ":zk_dtypes_py",
        "@pypi//absl_py",
        "@pypi//numpy",
    ],
)

py_test(
    name = "extension_field_test",
    srcs = ["tests/extension_field_test.py"],
    main = "tests/extension_field_test.py",
    deps = [
        ":test_utils",
        ":zk_dtypes_py",
        "@pypi//absl_py",
        "@pypi//numpy",
    ],
)
